[project]
name = "vdvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    # "mpi4py>=4.1.0",
    "scikit-learn>=1.7.2",
    "numpy",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "apex",
]

# Based on https://docs.astral.sh/uv/concepts/projects/config/#augmenting-build-dependencies
# Make sure you have a recent version of UV installed. Use `uv self update` to update UV if needed.
[[tool.uv.dependency-metadata]]
name = "apex"
version = "25.08"
requires-dist = ["torch"]

[tool.uv.extra-build-dependencies]
apex = [{ requirement = "torch", match-runtime = true, version = "25.08" }]

[tool.uv.extra-build-variables]
apex = { --global-option = "--cpp_ext --cuda_ext" }

[tool.uv.sources]
apex = { git = "https://github.com/NVIDIA/apex" }
